# bevy_voxel_world

./: .editorconfig  .envrc.sample  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  Makefile  PROGRESS.md  README.md  Taskfile.yml  WARP.md  build_rust_deps.sh  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.cursor/: mcp.json
VoxelGame/: AppDelegate.swift  GameViewController.swift  Renderer.swift  ShaderTypes.h  Shaders.metal
VoxelGame.xcodeproj/: project.pbxproj
assets/: terrain_textures.toml
bevister.xcodeproj/: project.pbxproj
bevy_mobile_example.xcodeproj/: project.pbxproj
crates/bevy_voxel_plugin/: Cargo.toml
crates/bevy_voxel_plugin/src/: lib.rs
crates/bevy_voxel_plugin/src/app/: mod.rs
crates/bevy_voxel_plugin/src/app/commands/: create_volume.rs  edit_voxels.rs  mod.rs  remesh_chunk.rs  seed_volume.rs
crates/bevy_voxel_plugin/src/app/queries/: find_chunks_needing_mesh.rs  get_chunk_data.rs  mod.rs
crates/bevy_voxel_plugin/src/app/services/: mesh_generation.rs  mod.rs  volume_management.rs
crates/bevy_voxel_plugin/src/authoring/: components.rs  mod.rs  seed.rs
crates/bevy_voxel_plugin/src/core/: grid.rs  index.rs  mod.rs
crates/bevy_voxel_plugin/src/infra/: mod.rs  random.rs
crates/bevy_voxel_plugin/src/infra/bevy_adapters/: components.rs  events.rs  materials.rs  mod.rs  plugin.rs  resources.rs
crates/bevy_voxel_plugin/src/infra/bevy_adapters/systems/: apply_meshes.rs  handle_edits.rs  mod.rs  process_meshing.rs  spawn_volume.rs
crates/bevy_voxel_plugin/src/infra/meshing/: material_selection.rs  mod.rs  surface_nets_adapter.rs
crates/bevy_voxel_plugin/src/plugin/: apply_mesh.rs  editing.rs  materials.rs  mod.rs  rendering_materials.rs  scheduler.rs  tests.rs  volume_spawn.rs
crates/bevy_voxel_plugin/src/plugin/tracing/: telemetry.rs
crates/bevy_voxel_plugin/src/voxel/: entities.rs  mod.rs  ports.rs  types.rs
crates/bevy_voxel_plugin/src/voxel/services/: chunk_generation.rs  grid_calculations.rs  mod.rs  sdf_operations.rs  voxel_editing.rs
crates/bevy_voxel_plugin/src/voxel_plugin/: mod.rs
crates/bevy_voxel_plugin/src/voxel_plugin/meshing/: bevy_mesh.rs  mod.rs  surface_nets.rs
crates/bevy_voxel_plugin/src/voxel_plugin/voxels/: storage.rs
crates/texture_baker/: Cargo.toml
crates/texture_baker/src/: config.rs  main.rs  packer.rs
crates/voxel_bevy/: Cargo.toml
crates/voxel_bevy/js/: voxel_noise_bridge.js
crates/voxel_bevy/src/: components.rs  consistency_test.rs  debug_ui.rs  entity_queue.rs  fly_camera.rs  input.rs  lib.rs  noise.rs  presentation_test.rs  resources.rs  triplanar_material.rs  world.rs  world_test.rs
crates/voxel_bevy/src/systems/: entities.rs  meshing.rs  mod.rs  refinement.rs  startup.rs
crates/voxel_demo_app/: Cargo.toml
crates/voxel_demo_app/assets/shaders/: pbr_fragment.wgsl  triplanar_pbr.wgsl
crates/voxel_demo_app/src/: atmosphere.rs  camera.rs  demo1.rs  fly_cam.rs  ios_mobile.rs  lib.rs  main.rs
crates/voxel_demo_app/src/atmosphere/: mod.rs
crates/voxel_demo_app/src/camera/: mod.rs
crates/voxel_demo_app/src/diag/: mod.rs  onscreen.rs
crates/voxel_demo_app/src/fly_cam/: mod.rs
crates/voxel_demo_app/src/orbit_cam/: mod.rs
crates/voxel_demo_app/src/player/: abilities.rs  actions.rs  components.rs  input.rs  mod.rs  movement.rs  spawn.rs
crates/voxel_demo_app/src/player/orientation/: gizmo.rs  mod.rs  visor.rs
crates/voxel_demo_app/src/player/punch/: attack.rs  mod.rs  visualize.rs
crates/voxel_demo_app/src/player/states/: climb.rs  debugfly.rs  locomotion.rs  mod.rs  transitions.rs
crates/voxel_game/: Cargo.toml  Trunk.toml  _headers  index.html  init.js.template  initializer.js  sw.js
crates/voxel_game/assets/shaders/: triplanar_ext.wgsl
crates/voxel_game/assets/textures/terrain/: diffuse_height.ktx2  material.ktx2  normal.ktx2
crates/voxel_game/src/: fly_camera.rs  main.rs  triplanar_material.rs
crates/voxel_game/src/scenes/: metaballs.rs  mod.rs  noise_lod.rs  sdf_test.rs
crates/voxel_game/src/shaders/: triplanar_ext.wgsl
crates/voxel_game/src/shared/: egui_perf.rs  mod.rs
crates/voxel_noise/: Cargo.toml  Makefile
crates/voxel_noise/examples/: test_noise.rs
crates/voxel_noise/js/: voxel_noise_bridge.js
crates/voxel_noise/src/: lib.rs  native.rs  wasm_main.rs
crates/voxel_plugin/: Cargo.toml  README.md
crates/voxel_plugin/benches/: noise_bench.rs  pipeline_bench.rs  surface_nets_bench.rs
crates/voxel_plugin/src/: constants.rs  constants_test.rs  edge_table.rs  edge_table_test.rs  fastnoise_lite.rs  lib.rs  metrics.rs  presentation.rs  sdf_samplers.rs  task_queue.rs  task_queue_test.rs  threading.rs  types.rs  types_test.rs  world.rs
crates/voxel_plugin/src/noise/: mod.rs  native.rs  simdnoise_terrain.rs  terrain.rs  terrain_test.rs  wasm.rs
crates/voxel_plugin/src/octree/: bounds.rs  budget.rs  config.rs  config_test.rs  leaves.rs  leaves_test.rs  mod.rs  mod_test.rs  node.rs  node_test.rs  refinement.rs  refinement_test.rs  transition.rs  transition_test.rs
crates/voxel_plugin/src/pipeline/: TDD_PLAN.md  async_process.rs  async_refinement.rs  composition.rs  composition_test.rs  consistency_test.rs  meshing.rs  meshing_test.rs  mod.rs  presample.rs  presample_test.rs  presentation.rs  presentation_test.rs  process.rs  test_utils.rs  types.rs
crates/voxel_plugin/src/surface_nets/: corner_mask.rs  corner_mask_test.rs  gradient.rs  gradient_test.rs  lod_seams.rs  lod_seams_test.rs  material_weights.rs  material_weights_test.rs  mod.rs  mod_test.rs  vertex_calc.rs  vertex_calc_test.rs
crates/voxel_unity/: Cargo.toml
crates/voxel_unity/src/: lib.rs
docs/: BRIDGE_DESIGN.md  VOLUME_LAYOUT.md  apron.md  dual_countoring_surface_nets.md  game_design_quick_reference.md  implementation_plan.md  implementation_plan_alt.md  materials_vertex_color_spec.md  platformer_control_systems.rs  spec.md  spec_draft.md  voxel_architecture.mmd  voxel_plugin_architecture.md  work_summary.md
ios-src/: Info.plist  build_rust_deps.sh  ios_run.sh  main.m  open_xcode_and_build.sh
src/: chunks_bevy.rs  (+6 more)
(+47 files in other folders)
