cargo-features = ["codegen-backend"]

[package]
name = "bevister"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.3.1"
bevy = { version = "0.16.1", features = ["dynamic_linking", "trace_tracy"] }
bevy-tnua = "0.24.0"
bevy-tnua-avian3d = "0.5.0"
bevy_enhanced_input = "0.17.0"
bevy_hanabi = "0.16.0"
fast-surface-nets = "0.2.1"
fastnoise2 = "0.3.1"
glam = "0.30.5"
half = "2.6.0"
ilattice = "0.4.0"
iyes_perf_ui = "0.5.0"
mesh_to_sdf = "0.4.0"
rand = "0.9.2"
rayon = "1.11.0"
simdly = "0.1.10"
taffy = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
