#cargo-features = ["codegen-backend"]

[workspace]
members = ["crates/bevy_voxel_plugin", "crates/voxel_demo_app"]
resolver = "2"

[workspace.dependencies]
avian3d = "0.3.1"
bevy = { version = "0.16.1" }
bevy-tnua = "0.24.0"
bevy-tnua-avian3d = "0.5.0"
bevy_enhanced_input = "0.17.0"
bevy_hanabi = "0.16.0"
fast-surface-nets = "0.2.1"
glam = "0.30.5"
ilattice = "0.4.0"
rayon = "1.11.0"
taffy = "0.9.0"
tracing = { version = "0.1.41" }
bevy_egui = "0.36.0"
rand_core = "0.9.3"
bevy_rand = { version = "0.11.3", features = ["wyrand", "rand_chacha"] }
bevy_prng = { version = "0.11.3" }
rand = "0.9.2"
iyes_perf_ui = "0.5.0"
log = { version = "*", features = [
	"max_level_debug",
	"release_max_level_warn",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
#codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
