[workspace]
members = [
	"crates/voxel_plugin",
	"crates/voxel_game",
	"crates/voxel_bevy",
	"crates/voxel_noise",
]
resolver = "2"

[workspace.package]
license = "MIT"
readme = "README.md"

[workspace.dependencies]

log = { version = "*", features = [
	"max_level_debug",
	"release_max_level_warn",
] }
rayon = "1.11.0"
bevy = "0.17"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
#codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Git patches removed - stable wasm-bindgen 0.2.106 has full threading support
