[package]
name = "bevy_voxel_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
avian3d = { workspace = true }
fast-surface-nets = { workspace = true }
ilattice = { workspace = true }
rayon = { workspace = true }
bevy_prng = { workspace = true }
bevy_rand = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
iyes_perf_ui = { workspace = true }
thiserror = "1.0"
