[package]
name = "bevy_voxel_plugin"
version = "0.1.0"
edition = "2024"

[features]
default = []
# When enabled (typically on wasm without threads), run meshing synchronously on the main thread
wasm_sync_mesh = []

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
fast-surface-nets = { workspace = true }
ilattice = { workspace = true }
rayon = { workspace = true }
bevy_prng = { workspace = true }
bevy_rand = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
iyes_perf_ui = { workspace = true }
thiserror = "1.0"
web-time = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
