[package]
name = "texture_baker"
version = "0.1.0"
edition = "2021"
description = "Terrain texture array baker for voxel framework"

[[bin]]
name = "bake_textures"
path = "src/main.rs"

[dependencies]
image = "0.25"
ktx2-rw = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
