[package]
name = "voxel_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
voxel_plugin = { path = "../voxel_plugin" }
bevy = { workspace = true }
rayon = { workspace = true }
smallvec = "1.13"
bevy_enhanced_input = "0.22"

# Noise is now in voxel_plugin which handles native/wasm automatically

[features]
default = []
# Stub feature for WASM builds (atomics handled at trunk level)
wasm-atomics = []

[dev-dependencies]
rand = "0.9"
