[package]
name = "voxel_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
voxel_plugin = { path = "../voxel_plugin" }
bevy = { workspace = true, features = ["ktx2"] }
rayon = { workspace = true }
smallvec = "1.13"
# WASM compat: use web_time::Instant, NOT std::time::Instant
web-time = "1.1"
bevy_enhanced_input = "0.22"
bevy_egui = { version = "0.39", optional = true }
egui = { version = "0.33", optional = true }

# Noise is now in voxel_plugin which handles native/wasm automatically

[features]
default = []
# Stub feature for WASM builds (atomics handled at trunk level)
wasm-atomics = []
# Tracy profiler integration (uses bevy's tracing-tracy)
trace_tracy = ["bevy/trace_tracy", "voxel_plugin/tracing"]
# Engine-agnostic metrics
metrics = ["voxel_plugin/metrics"]
# Debug UI with egui (requires metrics)
debug_ui = ["metrics", "bevy_egui", "egui"]

[dev-dependencies]
rand = "0.9"
