[package]
name = "voxel_demo_app"
version = "0.1.0"
edition = "2024"


[features]
# Diagnostic UI feature - disabled by default on all platforms
# Enable with: cargo run --features diagnostics_ui
# Or for debug builds: RUSTFLAGS="--cfg feature=\"diagnostics_ui\"" cargo run
diagnostics_ui = ["dep:iyes_perf_ui"]

# Debugging helpers for in-world gizmos
debug_gizmos = []

# Default features
default = []

# Opt-in: enable WebAssembly threads (requires COOP/COEP and atomics)
wasm_threads = []

# Opt-in: increase log verbosity for troubleshooting
verbose_logs = []


[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
bevy-tnua = { workspace = true }
bevy-tnua-avian3d = { workspace = true }
bevy_voxel_plugin = { path = "../bevy_voxel_plugin" }
bevy_egui = { workspace = true }
bevy_prng = { workspace = true }
bevy_rand = { workspace = true }
rand = { workspace = true }
iyes_perf_ui = { workspace = true, optional = true }
tracing = { workspace = true }
bevy_mod_inverse_kinematics = "0.9.0"
leafwing-input-manager = "0.17"
leafwing_abilities = { git = "https://github.com/Leafwing-Studios/leafwing_abilities", branch = "main" }

log = { version = "*", features = [
	"max_level_debug",
	"release_max_level_warn",
] }


[target.'cfg(target_os = "ios")'.dependencies]
bevy_ios_iap = { version = "0.7.0" }
wgpu = "26.0.1"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-rayon = { version = "1.3.0", features = ["no-bundler"] }
