[package]
name = "voxel_game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voxel_game"
path = "src/main.rs"

[features]
default = ["dev", "metrics"]
dev = ["bevy/dynamic_linking"]
# Enable atomics/shared-memory for WASM builds (required for rayon workers)
wasm-atomics = ["voxel_bevy/wasm-atomics"]
# Tracy profiler integration
trace_tracy = ["voxel_bevy/trace_tracy"]
# Metrics collection (enabled by default)
metrics = ["voxel_bevy/debug_ui"]
# Enable WebGPU backend for WASM (instead of WebGL2)
# Note: WebGPU requires Chrome 113+ or other WebGPU-capable browsers
webgpu = ["bevy/webgpu"]

[dependencies]
voxel_plugin = { path = "../voxel_plugin" }
voxel_bevy = { path = "../voxel_bevy" }
bevy = { workspace = true }
rayon = { workspace = true }
smallvec = "1.13"
bevy_egui = "0.39"
bevy_enhanced_input = "0.22"
rand = "0.9"
web-time = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }
web-sys = { version = "0.3", features = ["Window", "Navigator"] }
console_error_panic_hook = "0.1"
