[package]
name = "voxel_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { workspace = true }
crossbeam-channel = "0.5"
glam = { version = "0.30", features = ["std"] }
smallvec = "1.13"
# WASM compat: use web_time::Instant, NOT std::time::Instant
web-time = "1.1"
tracing = { version = "0.1", optional = true }

[features]
default = []
# Engine-agnostic metrics collection
metrics = []
# Tracing instrumentation for profilers (Tracy, etc.)
tracing = ["dep:tracing"]

# Native: voxel_noise for FastNoise2 FFI wrapper
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
voxel_noise = { path = "../voxel_noise" }

# WASM: wasm-bindgen for JS bridge to Emscripten module
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fast-surface-nets = "0.2"

[[bench]]
name = "surface_nets_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false

[lib]